<resources>
    <string name="app_name">LapTIme</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="lap">Lap</string>
    <string name="start">Start</string>
    <string name="time_left">TimeLeft: %1$d</string>
    <string name="laps_done">Laps: %1$d</string>
    <string name="menu">menu</string>
    <string name="author">Author: Kadiri Ehijie</string>
    <string name="version">App Version: %1$d</string>
</resources>